--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,36 +1,20 @@
-version: '2.1'
+version: '2'
 services:
   radiusd:
     image: radiii
-    command: -f -l stdout
     environment:
       - RADIII_TIMEZONE=America/Detroit
       - RADIII_BASEURL=http://library.thegdl.org:4500
       - RADIII_MAX_FINE=3.99
-      - RADIII_RADIUS_CLIENT_SUBNET=192.168.0.0/24
-      - RADIII_RADIUS_CLIENT_SECRET=testing123
-    volumes:
-      - raddb:/etc/raddb
-    networks:
-      testnet:
-        ipv4_address: 192.168.127.2
+      - RADIII_CLIENT_IP=192.168.128.0/24
+      - RADIII_CLIENT_SECRET=testing123
     ports:
       - "1812:1812/udp"
-  radclient:
-    image: alpine
-    command: /bin/sh
-    networks:
-      testnet:
-        ipv4_address: 192.168.127.3
-volumes:
-  raddb:
-networks:
-  testnet:
-    driver: bridge
-    enable_ipv6: false
-    ipam:
-      driver: default
-      config:
-        - subnet: 192.168.127.0/24
-          gateway: 192.168.127.1
 
+networks:
+  default:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 192.168.128.0/24
+          gateway: 192.168.128.1
